fixed footer respnsive on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -77,9 +77,14 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  height: 100%;
 }
+html {
+  height: 100%;
+}
+
 
 main {
   flex: 1 0 auto;
 }
-   
+    
